[gd_scene load_steps=5 format=2]

[ext_resource path="res://SourceCodePro-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://SystemChat.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]

[node name="SystemLabel" type="Label" parent="."]
margin_left = 0.949982
margin_top = 1.9
margin_right = 188.95
margin_bottom = 18.9
custom_fonts/font = SubResource( 1 )
text = "Sol III [earth]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemChat" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatDisplay" type="TextEdit" parent="SystemChat"]
margin_left = 2.0
margin_top = 44.0
margin_right = 302.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "azariah: hey"
readonly = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatInput" type="LineEdit" parent="SystemChat"]
margin_left = 2.0
margin_top = 177.0
margin_right = 303.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}
